feat: Criado o endpoint de join na sala
